# dbus-client-gen

./: .gitignore  .isort.cfg  .travis.yml  CHANGES.txt  Makefile  README.rst  check.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: dummy.yml  main.yml  push.yml  weekly.yml
src/dbus_client_gen/: __init__.py  _errors.py  _gmoreaders.py  _managed_objects.py  _managed_objects_queries.py  _managed_objects_readers.py  _version.py
tests/: _introspect.py  test_deterministic.py  test_generated.py  test_hypothesis.py
