[metadata]
name = dbus-client-gen
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/mulkieran/dbus-client-gen
description = generates classes and methods useful to a D-Bus client
license = MPL-2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: dbus_client_gen._version.__version__
platforms =
    Linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src

[options.packages.find]
where = src
